[gd_scene load_steps=6 format=2]

[ext_resource path="res://fishing.gd" type="Script" id=1]
[ext_resource path="res://art_assets/fishing/fishingui.png" type="Texture" id=2]
[ext_resource path="res://art_assets/fishing/fishingbar.png" type="Texture" id=3]
[ext_resource path="res://art_assets/fishing/fishingblahaj.png" type="Texture" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends TextureRect

var fishPositionX = 5;
var fishPosition = 80;
var fishPositionMin = 5;
var fishPositionMax = 80;

var aggression = 0;
var deltaAccumulator = 0;
var updateShake = 0.05;
var shakeOffsetX = 0;
var shakeOffsetY = 0;
var random = RandomNumberGenerator.new();

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	fishPosition = clamp(fishPosition, fishPositionMin, fishPositionMax);
	deltaAccumulator += delta;
	if(deltaAccumulator > updateShake):
		shakeOffsetX = 1 - random.randf() * 2;
		shakeOffsetY = 1 - random.randf() * 2;
		deltaAccumulator = 0;
	$\".\".rect_position.y = fishPosition + shakeOffsetY;
	$\".\".rect_position.x = fishPositionX + shakeOffsetX;
	pass

func GetIsFishInBar(var barMin, var barMax):
	return fishPosition + ($\".\".rect_size.y / 2)  > barMin && fishPosition + ($\".\".rect_size.y / 2) < barMax;

func SetAggression(var aggression):
	self.aggression = aggression;
"

[node name="Control" type="Control"]
script = ExtResource( 1 )

[node name="FishingUI" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 96.0
texture = ExtResource( 2 )

[node name="FishingBar" type="NinePatchRect" parent="."]
margin_left = 5.0
margin_top = 84.0
margin_right = 16.0
margin_bottom = 92.0
texture = ExtResource( 3 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="FishingProgress" type="NinePatchRect" parent="."]
margin_left = 19.0
margin_top = 4.0
margin_right = 27.0
margin_bottom = 92.0
grow_vertical = 0
texture = ExtResource( 3 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="FishingBlahaj" type="TextureRect" parent="."]
margin_left = 5.0
margin_top = 4.0
margin_right = 16.0
margin_bottom = 15.0
texture = ExtResource( 4 )
script = SubResource( 1 )
